fixed logistics alignment

--- a/less/creative.less
+++ b/less/creative.less
@@ -269,6 +269,12 @@ header {
   font-size: 70px;
 }
 
+.center-block {
+   margin-left:auto;
+   margin-right:auto;
+   display:block;
+}
+
 .logistics {
   text-align: center;
   top: 20px;
